# note

./: .gitignore  README.md
IoT/: cip_protocol.py  python3-socket-tcp-client.py  sen0366_with_usb.py  test.py
StateMachine/: creat_state_machine_by_thread.py
async_demo/: demo2_multiprocessing_pool.py  demo3_concurrent.py  demo4_concurrent.py  thread_demo.py
audio/: Audio_Magnitude_Spectrum.py  Power_spectrum.csv  audio_thd copy 2.py  audio_thd copy 3.py  audio_thd copy.py
basic/: 2020-01-13T09-42-00.717_Master_Big.txt  byte_vs_string.py  copy_vs_deepcopy.py  dataclasses_demo.py  dictclasses_demo_.py  encode_deconde_file_by_base64.py  factory.py  match.py  os_module.py  param_in_class.py  property_demo.py  readme.md  walk_direction.py
bot/: readme.md  tg.py
coroutine_demo/: coroutine_demo.py
efficiency/: memory_profiler.py  readme.md
fastAPI_demo/: demo1.py  readme.md
flet_demo/: demo_for_multiprocess.py
gettext-demo/: README.md  gettext_demo.7z  pyproject.toml
gettext-demo/gettext-lokalise/: pyproject.toml
gettext-demo/gettext_demo/: app.py  readme.md  trans_po_file_by_googletrans.py
gettext-demo/gettext_demo/locales/en/LC_MESSAGES/: base.po
gettext-demo/gettext_demo/locales/th/LC_MESSAGES/: base.po
gettext-demo/gettext_demo/locales/vi/LC_MESSAGES/: base.po
gettext-demo/gettext_demo/locales/zh-TW/LC_MESSAGES/: base.po
leetcode/: 1. Two sum.py  104. Maximum Depth of Binary Tree.py  121. Best Time to Buy and Sell Stock ii.py  121. Best Time to Buy and Sell Stock.py  14. Longest Common Prefix.py  15. 3Sum.py  16. 3Sum Closest.py  238 .py  (+12 more)
(+146 files in other folders)
